--- a/src/components/Main/Main.module.scss
+++ b/src/components/Main/Main.module.scss
@@ -14,7 +14,7 @@
 	flex-direction: column;
 	align-items: center;
 	justify-content: center;
-	transition: width 1s;
+	transition: width 0.5s;
 	box-sizing: border-box;
 	padding-bottom: 10px;
 }
