--- a/src/components/Menu/Menu.module.scss
+++ b/src/components/Menu/Menu.module.scss
@@ -10,12 +10,11 @@
 	right: 0;
 	bottom: 0;
 	width: menu.$width + vw;
-	// height: 100%;
 	border-left: 1px solid var(--border-color);
 	box-sizing: border-box;
 	padding: 40px;
 	transform: translateX(100%);
-	transition: transform 1s;
+	transition: transform 0.5s;
 
 	background-color: var(--bg-color);
 
